@@ -3,11 +3,8 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.PythonScripts.PythonScript</string>
-          <string>PythonScript</string>
-        </tuple>
-        <none/>
+        <global name="PythonScript" module="Products.PythonScripts.PythonScript"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -70,7 +67,11 @@
             <key> <string>_body</string> </key>
             <value> <string>delivery = state_change[\'object\']\n
 \n
-if delivery.getCausalityState() != \'draft\':\n
+getCausalityState = getattr(delivery, \'getCausalityState\', None)\n
+getSimulationState = getattr(delivery, \'getSimulationState\', None)\n
+\n
+if getCausalityState is not None and getCausalityState() != \'draft\' and \\\n
+   getSimulationState is not None and getSimulationState() != \'draft\':\n
   delivery.calculate()\n
 </string> </value>
         </item>
@@ -117,6 +118,10 @@ if delivery.getCausalityState() != \'draft\':\n
                             <string>state_change</string>
                             <string>_getitem_</string>
                             <string>delivery</string>
+                            <string>getattr</string>
+                            <string>None</string>
+                            <string>getCausalityState</string>
+                            <string>getSimulationState</string>
                             <string>_getattr_</string>
                           </tuple>
                         </value>
