@@ -3,11 +3,8 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.PythonScripts.PythonScript</string>
-          <string>PythonScript</string>
-        </tuple>
-        <none/>
+        <global name="PythonScript" module="Products.PythonScripts.PythonScript"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -81,8 +78,11 @@ delivery = delivery_movement.getExplanationValue()\n
 # possible child of a Accounting Transaction\n
 # in the Accounting Transaction Module\n
 \n
-if getattr(delivery, \'getCausalityState\', None) is not None and \\\n
-    delivery.getCausalityState() != \'draft\':\n
+getCausalityState = getattr(delivery, \'getCausalityState\', None)\n
+getSimulationState = getattr(delivery, \'getSimulationState\', None)\n
+\n
+if getCausalityState is not None and getCausalityState() != \'draft\' and \\\n
+   getSimulationState is not None and getSimulationState() != \'draft\':\n
   delivery.calculate()\n
 </string> </value>
         </item>
@@ -133,6 +133,8 @@ if getattr(delivery, \'getCausalityState\', None) is not None and \\\n
                             <string>delivery</string>
                             <string>getattr</string>
                             <string>None</string>
+                            <string>getCausalityState</string>
+                            <string>getSimulationState</string>
                           </tuple>
                         </value>
                     </item>
